docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-12-08.ceg/compilation.txt
Materia.java:23: error: method getMaximoDeAlumnosPorGrupo in class Materia cannot be applied to given types;
      getMaximoDeAlumnosPorGrupo(maximoDeAlumnosPorGrupo);
      ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
1 error
Not compiled
